Using the Java 11 http client